--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,10 @@ const pageTitle = "About Me";
 ---
 
 <Layout title={pageTitle}>
+  <script>
+    import "@shoelace-style/shoelace/dist/components/button/button.js";
+  </script>
+
   <main
     class:list={[
       layoutStyles.container,
